--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name=theme-color content=#35495e>
+    <meta name=apple-mobile-web-app-capable content=yes>
+    <meta name=apple-mobile-web-app-status-bar-style content=#35495e>
+    <meta name=msapplication-navbutton-color content=#35495e>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Empresas que usam Vue.js no Brasil - Vue.js Brasil</title>
   </head>
