💄 update og tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <meta name=apple-mobile-web-app-status-bar-style content=#35495e>
     <meta name=msapplication-navbutton-color content=#35495e>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta property="og:site_name" content="Vue.js Brasil">
+    <meta property="og:image" content="<%= BASE_URL %>/img/vue-br-logo.jpeg">
     <meta property="og:title" content="Empresas que usam Vue.js no Brasil - Vue.js Brasil">
     <meta property="og:description" content="Esta lista é uma iniciativa pública que tem o intuito de divulgar o nome de empresas que usam Vue.js de alguma forma.">
     <title>Empresas que usam Vue.js no Brasil - Vue.js Brasil</title>
