--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,25 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but "Empresas que usam Vue.js no Brasil" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <div class="no-script container is-fluid">
+        <h1 class="title">Empresas que usam Vue.js no Brasil</h1>
+        <p class="subtile">
+          Desculpe, esta aplicação precisa que o JavaScript esteja ativado em seu navegador. <br>
+          Por favor ative o JavaScript para continuar.
+        </p>
+
+        <div class="buttons">
+          <a target="_blank" class="button is-dark is-large"
+            href="https://github.com/vuejs-br/empresas-que-usam-vue-no-brasil">
+            Github
+          </a>
+
+          <a target="_blank" class="button is-link is-light is-large" href="https://t.me/vuejsbrasil">
+            Telegram
+          </a>
+        </div>
+
+      </div>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
